# SoundProcessorCPP

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  createWav.cpp  main.cpp
audio_samples/: config1.txt  config2.txt  config3.txt
src/: ConfigParser.hpp  Converter.hpp  ConverterFactory.hpp  EchoConverter.hpp  MixConverter.hpp  MuteConverter.hpp  SoundProcessor.hpp  WavFile.hpp
test/: ConfigParserTests.cpp  ConverterTests.cpp  WavFileTests.cpp  a.out
